harness/clients/ratatui/tests/snapshots/conformance__cancel-midturn.snap
---
source: harness/clients/ratatui/tests/conformance.rs
expression: screen
---
── scrollback ──
Working on it
⨯ cancelled
── live ──












>
tokens — · — · execute · ^D exit
