harness/clients/ratatui/tests/snapshots/conformance__custom-with-fallback.snap
---
source: harness/clients/ratatui/tests/conformance.rs
expression: screen
---
── scrollback ──
<buildgraph.dag>
proto -> agui -> kernel
── live ──












>
tokens — · — · execute · ^D exit
