harness/clients/ratatui/tests/snapshots/conformance__progress-surface.snap
---
source: harness/clients/ratatui/tests/conformance.rs
expression: screen
---
── scrollback ──
[###############################] indexing the workspace 9/9
── live ──












>
tokens — · — · execute · ^D exit
