harness/clients/ratatui/tests/snapshots/conformance__question-surface.snap
---
source: harness/clients/ratatui/tests/conformance.rs
expression: screen
---
── scrollback ──
? asked by q-1
Which crate?
> orrery-proto
  orrery-kernel (default)
── live ──












>
tokens — · — · execute · ^D exit
