harness/clients/ratatui/tests/snapshots/conformance__stream-surface.snap
---
source: harness/clients/ratatui/tests/conformance.rs
expression: screen
---
── scrollback ──
✓ stream stderr
── live ──












>
tokens — · — · execute · ^D exit
