harness/clients/ratatui/tests/snapshots/conformance__streaming-markdown.snap
---
source: harness/clients/ratatui/tests/conformance.rs
expression: screen
---
── scrollback ──
Here is the fix:

────────────
  fn main() {
      println!("hi");
  }
────────────

── live ──












>
tokens — · — · execute · ^D exit
