harness/clients/ratatui/tests/snapshots/conformance__table-then-resort.snap
---
source: harness/clients/ratatui/tests/conformance.rs
expression: screen
---
── scrollback ──
crate         lines
orrery-agui   612
orrery-proto  2358
── live ──












>
tokens — · — · execute · ^D exit
